# nu-automake

./: Makefile.in  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
contrib/nurpc/: nurpc.py
src/: Makefile.am  Makefile.in  blockmap.cpp  blockmap.h  clientversion.h  init.cpp  kernel.cpp  rpcwallet.cpp
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  sanity.h
src/config/: faircoin-config.h.in
